fix: make top nav usable on tablet resolutions
Show quick search until 940px width, and move ratio bar to top instead of showing fewer stats.

--- a/resources/sass/components/_quick_search.scss
+++ b/resources/sass/components/_quick_search.scss
@@ -4,7 +4,7 @@
     flex-grow: 1;
     z-index: 5;
 
-    @media screen and (max-width: 1150px) {
+    @media screen and (max-width: 940px) {
         display: none;
     }
 }
